# gharchive-data-pipeline

./: .gitignore  LICENSE  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: ci.yml
envs/: .env.example
gh-archive/: README.md  pyproject.toml  setup.cfg  setup.py
gharchive_dagster/: README.md  pyproject.toml  setup.cfg  setup.py  workspace.yaml
gharchive_dagster/gharchive_dagster/pipelines/bronze/: assets.py
gharchive_dagster/gharchive_dagster/resources/: pyspark_resource.py  s3_resource.py
gharchive_dbt/: .user.yml  dbt_project.yml  profiles.yml
trino/catalog/: datalake.properties
