[tool.poetry]
name = "gh-archive-pipeline"
version = "0.1.0"
description = "A pipeline project for processing GitHub Archive data."
authors = ["Arthur Pitta <arthurpitta21@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
dagster = "1.8.2"
dagster-webserver = "1.8.2"
dagster-postgres = "0.24.2"
requests = "^2.32.3"

[tool.poetry.dev-dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
